--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
+
 export interface Props {
     title: string;
 }
@@ -16,6 +19,12 @@ const { title } = Astro.props;
         <title>{title}</title>
     </head>
     <body>
-        <slot />
+        <div class="min-h-screen bg-[#f5f3ef] text-[#2a2a2a]">
+            <Header />
+            <main>
+                <slot />
+            </main>
+            <Footer />
+        </div>
     </body>
 </html>
